remove extra opts and remove threading