@@ -8,4 +8,4 @@ RUN chown -R minecraft:minecraft .
 
 USER minecraft
 # Copy files only if they don't yet exist (server.jar, server.properties, etc) and start the server
-CMD java -server -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSIncrementalPacing -XX:ParallelGCThreads="$THREADS" -XX:+AggressiveOpts -Xmx"$MAX_RAM"G -Xms"$MIN_RAM"G -jar /server.jar nogui
+CMD java -Xmx"$MAX_RAM"G -Xms"$MIN_RAM"G -jar /server.jar nogui
